--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                     </div>
                 </div>
                 <div class="profile-image">
-                    <img src="images/profile.jpg" alt="Yuming Su" style="width: 200px; height: 200px; border-radius: 50%; object-fit: cover;">
+                    <img src="yumingsu_homepage/images/profile.jpg" alt="Yuming Su" style="width: 200px; height: 200px; border-radius: 50%; object-fit: cover;">
                 </div>
             </section>
 
@@ -469,8 +469,8 @@
                     <p>I contribute to the development of computational chemistry software:</p>
                     <ul>
                         <li><strong>MLatom 3</strong> - A platform for machine learning-enhanced computational chemistry simulations and workflows</li>
-                        <li><strong>Machine Learning Models</strong> - Development of AI-driven approaches for chemical property prediction</li>
-                        <li><strong>Data Analysis Tools</strong> - Custom scripts and algorithms for chemical data processing</li>
+                        <li><strong>Surfacia</strong> - Development of AI-driven approaches for chemical property prediction</li>
+                        <li><strong>TPA calculation</strong> - Custom scripts and algorithms for TPA data processing</li>
                     </ul>
                 </div>
             </section>
