--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                     </div>
                 </div>
                 <div class="profile-image">
-                    <img src="https://sym823808458.github.io/yumingsu.github.io/yumingsu_homepage/images/profile.jpg" alt="Yuming Su" style="width: 200px; height: 200px; border-radius: 50%; object-fit: cover;">
+                    <img src="yumingsu_homepage/images/profile.jpg" alt="Yuming Su" style="width: 200px; height: 200px; border-radius: 50%; object-fit: cover;">
                 </div>
             </section>
 
