--- a/index.html
+++ b/index.html
@@ -335,10 +335,11 @@
                     <p class="subtitle">Assistant Researcher</p>
                     <p class="affiliation">
                         📍 Xiamen, China<br>
-                        🏛️ AI4EC Lab, Tan Kah Kee Innovation Laboratory (IKKEM)
+                        🏛️ AI4EC Lab, Tan Kah Kee Innovation Laboratory (IKKEM)<br>
+                        yumingsu@xmu.edu.cn<br>
                     </p>
                     <div class="contact-links">
-                        <a href="mailto:yumingsu@xmy.edu.cn">Email</a>
+                        <a href="mailto:yumingsu@xmu.edu.cn">Email</a>
                         <a href="https://scholar.google.com/citations?hl=zh-CN&user=SL8pQfEAAAAJ" target="_blank">Google Scholar</a>
                         <a href="https://orcid.org/0009-0001-9510-4173" target="_blank">ORCID</a>
                         <a href="https://github.com/sym823808458" target="_blank">GitHub</a>
